api/src/graph/snapshots/hopr_api__graph__costs__tests__return_intermediate_edge_positive_when_capacity_only_no_probes.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 1, result_cost: cost }"
---
observations:
  immediate: ~
  intermediate:
    capacity: 1000
    score: 0
initial_cost: 1
path_index: 1
result_cost: 0.5
