api/src/graph/snapshots/hopr_api__graph__costs__tests__return_last_edge_penalized_when_connected_but_zero_score.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 1, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0
    ack_rate: 0.9
  intermediate: ~
initial_cost: 1
path_index: 1
result_cost: 0.45
