api/src/graph/snapshots/hopr_api__graph__costs__tests__return_last_edge_positive_when_connected_with_empty_intermediate.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 1, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate:
    capacity: ~
    score: 0
initial_cost: 1
path_index: 1
result_cost: 0.855
