api/src/graph/snapshots/hopr_api__graph__costs__tests__return_last_edge_requires_connectivity-2.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{\n    observations: obs_no_conn, initial_cost: 1.0, path_index: 1, result_cost:\n    cost_not_connected\n}"
---
observations:
  immediate: ~
  intermediate:
    capacity: 1000
    score: 0.95
initial_cost: 1
path_index: 1
result_cost: -1
