api/src/graph/snapshots/hopr_api__graph__costs__tests__return_last_edge_requires_connectivity.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{\n    observations: obs_conn, initial_cost: 1.0, path_index: 1, result_cost:\n    cost_connected\n}"
---
observations:
  immediate:
    connected: true
    score: 0.95
  intermediate:
    capacity: 1000
    score: 0.95
initial_cost: 1
path_index: 1
result_cost: 0.95
