api/src/graph/snapshots/hopr_api__graph__costs__tests__symmetrical_forward_path_works_with_forward_cost_fn.snap
---
source: api/src/graph/costs.rs
expression: "PathCost\n{ after_first_edge: cost_after_first, after_last_edge: cost_after_last, }"
---
after_first_edge: 0.95
after_last_edge: 0.95
